--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@react-spring/parallax": "^9.5.5",
     "@react-spring/web": "^9.5.5",
     "@reduxjs/toolkit": "^1.9.0",
@@ -27,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "react-spring": "^9.5.5",
     "sass": "^1.56.0",
+    "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "web-vitals": "^3.0.4"
